finishing category handler and routes
